feat: update Gradle wrapper and improve DriverFactory and VideoPage implementations